Implemented message broker scenario on deleted product using Publish-subscribe pattern
