# Product microservice/public/swagger.json
@@ -55,24 +55,8 @@
 				],
 				"type": "object"
 			},
-			"DeleteResult": {
-				"properties": {
-					"acknowledged": {
-						"type": "boolean",
-						"description": "Indicates whether this write result was acknowledged. If not, then all other members of this result will be undefined."
-					},
-					"deletedCount": {
-						"type": "number",
-						"format": "double",
-						"description": "The number of documents that were deleted"
-					}
-				},
-				"required": [
-					"acknowledged",
-					"deletedCount"
-				],
-				"type": "object",
-				"additionalProperties": false
+			"ObjectId": {
+				"type": "string"
 			}
 		},
 		"securitySchemes": {}
@@ -182,7 +166,22 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/DeleteResult"
+									"allOf": [
+										{
+											"$ref": "#/components/schemas/ProductDocument"
+										},
+										{
+											"properties": {
+												"_id": {
+													"$ref": "#/components/schemas/ObjectId"
+												}
+											},
+											"required": [
+												"_id"
+											],
+											"type": "object"
+										}
+									]
 								}
 							}
 						}
